# alicia

./: AUTHORS.txt  CHANGELOG.txt  CITE.txt  CMakeLists.txt  CONTRIBUTING.md  README.md
ALICIA-examples/90271-TPT6-augmented-5deg-alpha1E3-res1E1/: input_tile6_fem.mknix
ALICIA-examples/91615-TPSA-augmented-5deg-alpha1E3-res1E1/: input_lamella_fem.mknix
code-templates/: template.cpp  template.py
scripts/: compute_max_power_density.py  compute_power.py  plot_simulation_times.plt
src/: ALICIA.cpp  CMakeLists.txt  jsoncpp.cpp
